--- a/cLand/src/style.scss
+++ b/cLand/src/style.scss
@@ -189,7 +189,7 @@ body {
   display: flex;
   list-style: none;
   padding-top: 115px;
-  padding-left: 16.5%;
+  justify-content: center;
 }
 
 .main-awards-logos__li {
@@ -335,4 +335,56 @@ body {
 .main-amazing-things-support-bunner-button-second {
   font-size: 24px;
   margin: 30px 0 0 10px
+}
+
+// container blockqoute
+.main__container-blockqoute {
+  background-color: #2e2e2e;
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  padding-top: 79px;
+}
+
+.main-container-blockqoute__paragraph {
+  padding-left: 14%;
+  width: 72%;
+  font-size: 1.4rem;
+}
+
+.main-container-blockqoute__img {
+  width: 43px;
+  margin-left: 7px;
+}
+
+.main-container-blockqoute__paragraph {
+  margin-top: 28px;
+  padding-top: 21px;
+  line-height: 1.9rem;
+  word-spacing: 0.06rem;
+}
+
+.main-container-blockqoute__container-name {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 67px;
+}
+
+.main-container-blockqoute-container-name__img {
+  color: #f1c40f;
+  @include widthHeight(35px, 35px);
+}
+
+.main-container-blockqoute-container-name__tire {
+  font-size: 38px;
+  margin-top: 12px;
+  margin-top: -9px;
+  margin-left: 0.6%;
+}
+
+.main-container-blockqoute-container-name__name {
+  color: #f1c40f;
+  font-size: 21px;
+  margin-top: 4px;
+  margin-left: 1%;
 }
